Fixed minor alignment issues #Added more styles and animation #Added scroll to top button #Worked on code optimization

--- a/index.css
+++ b/index.css
@@ -1,87 +1,75 @@
-
-.navbar {
+.footer {
   position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 999;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
 }
 
-main {
-  padding-top: 5%; /* add padding to body to avoid overlapping content */
+.profileImage {
+  height: 100%;
+  width: 100%;
+  position: relative;
+  border-top-left-radius: 10%;
+  border: 5px solid var(--WhiteColor);
 }
 
-.footer{
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
-
- }
-
- .profileImage{
-    height: 100%;
-    width: 100%;
-    position: relative;
-    /* border-top-left-radius: 20%; */
-    border: 5px solid white;
- }
-
- .cardBody
- {
-    margin-bottom: 0;
- }
+.cardBody {
+  margin-bottom: 0;
+}
 
 .card:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-.navbar, .navbar-brand{
-    font-size: 25px;
-    padding: 1vh;
-  }
-  .bgimg {
-    background-image: url('/images/back.jpeg'); /* Replace with your image URL */
-    background-size: cover;
-    position: relative;
-    height: 100vh;
-  }
-  
-  .bgimg:before {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: black;
-    opacity: 0.7; /* Adjust opacity value as desired */
-  }
-
-  .aboutCard{
-    height: 100%;
-    /* border-bottom-right-radius: 20%; */
-    background: #ffffffcc;
-  }
-   
-  .fab{
-    padding: 4%;
-  }
-
-.sectionHeading{
-    font-size: 3vh;
-    background: #018a7b;
-    padding: 10px 20px;
-    color: white;
+.navbar,
+.navbar-brand {
+  font-size: 25px;
+  padding: 1vh;
+}
+.bgimg {
+  background-image: url("/images/back.jpeg");
+  background-size: cover;
+  position: relative;
+  height: 115vh;
 }
 
-.formButton
-{
-    width: 100%;
-    
+.bgimg:before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: var(--BlackColor);
+  opacity: 0.7;
 }
- 
 
-label{
+.aboutImageCard {
+  height: 100%;
+  border-top-left-radius: 10%;
+  background: var(--GrayTransperent);
+}
+.aboutTextCard {
+  height: 100%;
+  border-bottom-right-radius: 10%;
+  background: var(--GrayTransperent);
+}
+
+.fab {
+  padding: 4%;
+}
+
+.sectionHeading {
+  font-size: 3vh;
+  background: var(--GreenTheme);
+  padding: 10px 20px;
+  color: var(--WhiteColor);
+}
+
+.formButton {
+  width: 100%;
+}
+
+label {
   color: var(--GreenThemeText);
 }
 
@@ -90,21 +78,60 @@ label{
 }
 
 .accordion-button:not(.collapsed) {
-  color: var(--GreenThemeText) ;
-  background-color: #cbedea;
-  box-shadow: inset 0 -1px 0 rgba(0,0,0,.125);
+  color: var(--GreenThemeText);
+  background-color: var(--GreenThemeLight);
 }
 
 .accordion-button:focus {
-  border-color: var(--GreenThemeText) ;
-  box-shadow: none ;
+  border-color: var(--GreenThemeText);
+  box-shadow: none;
 }
 
-#formButtonSubmit{
-    background-color: var(--GreenTheme);
+#formButtonSubmit {
+  background-color: var(--GreenTheme);
+  color: var(--WhiteColor);
 }
 
-#formButtonSubmit:hover {
-  color: white;
-  background-color: var(--GreenTheme);;
+.cardClickOpenModal:hover {
+  animation: shake 0.4s;
+  animation-iteration-count: 1;
+}
+
+@keyframes shake {
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+}
+
+.ButtonScrollToTop {
+  display: none;
+  position: fixed;
+  bottom: 12%;
+  right: 5%;
+  width: 60px;
+  height: 60px;
+  color: #fff;
+  border: 2px solid black;
+  border-radius: 50%;
+  font-size: 20px;
+  background-color: var(--GreenTheme);
+}
+
+.ButtonScrollToTop:hover {
+  background-color: var(--GreenThemeDark);
+}
+
+.fabIcon {
+  padding: 0;
+  padding-right: 10%;
+}
+
+.card-title {
+  color: var(--GreenThemeText);
 }
